k8s/bad-image-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-image-app
  namespace: student-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-image-app
  template:
    metadata:
      labels:
        app: bad-image-app
    spec:
      containers:
        - name: bad-image-app
          image: this-image-definitely-does-not-exist:v99
