k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-api-ingress
  namespace: student-platform
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: student-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-api-svc
            port:
              number: 80
